--- a/pro2/pro2.ipynb
+++ b/pro2/pro2.ipynb
@@ -43,12 +43,7 @@
     }
    ],
    "source": [
-    "v = [\n",
-    "    [1, 2, 1, 2, 0],\n",
-    "    [1, 1, 1, 1, 1],\n",
-    "    [0, 0, 2, 1, 1],\n",
-    "    [2, 2, 2, 1, 0]\n",
-    "]\n",
+    "v = [[1, 2, 1, 2, 0], [1, 1, 1, 1, 1], [0, 0, 2, 1, 1], [2, 2, 2, 1, 0]]\n",
     "\n",
     "search_ = [None, None, float(\"inf\")]\n",
     "for v1 in v:\n",
@@ -77,6 +72,7 @@
     "\n",
     "np.random.seed(123)\n",
     "\n",
+    "\n",
     "def generateAllVectors(B, k):\n",
     "    ready = False\n",
     "    multiplyers = np.zeros(len(B), dtype=np.uint8)\n",
@@ -103,11 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B = np.array([\n",
-    "    [1, 0, 0, 2, 4],\n",
-    "    [0, 1, 0, 1, 0],\n",
-    "    [0, 0, 1, 5, 6]\n",
-    "], dtype=np.uint8)\n",
+    "B = np.array([[1, 0, 0, 2, 4], [0, 1, 0, 1, 0], [0, 0, 1, 5, 6]], dtype=np.uint8)\n",
     "\n",
     "words = generateAllVectors(B, 7)"
    ]
@@ -248,7 +240,7 @@
     "        print(\"\\t\".join(line))\n",
     "        line = []\n",
     "    line.append(str(word))\n",
-    "print(\"\\t\".join(line))        "
+    "print(\"\\t\".join(line))"
    ]
   },
   {
@@ -279,7 +271,7 @@
     "    m = np.min(dst)\n",
     "    L = C[np.where(dst == m)]\n",
     "    w = L[np.random.randint(0, len(L))]\n",
-    "    \n",
+    "\n",
     "    # korzystajac ze znamy z gory B dla zadania 7\n",
     "    return [w[0], w[1], w[2]]"
    ]
@@ -357,7 +349,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "M_norm = M / 4.\n",
+    "M_norm = M / 4.0\n",
     "sns.heatmap(M_norm, cmap=\"binary\", square=True)\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
@@ -379,12 +371,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = np.array([\n",
-    "    [1, 0, 0, 0, 0, 4, 4, 2, 0, 1, 1],\n",
-    "    [0, 1, 0, 0, 0, 3, 0, 2, 2, 1, 0],\n",
-    "    [0, 0, 1, 0, 0, 2, 0, 1, 1, 1, 1],\n",
-    "    [0, 0, 0, 1, 1, 0, 0, 0, 4, 3, 0]\n",
-    "], dtype=np.uint8)"
+    "G = np.array(\n",
+    "    [\n",
+    "        [1, 0, 0, 0, 0, 4, 4, 2, 0, 1, 1],\n",
+    "        [0, 1, 0, 0, 0, 3, 0, 2, 2, 1, 0],\n",
+    "        [0, 0, 1, 0, 0, 2, 0, 1, 1, 1, 1],\n",
+    "        [0, 0, 0, 1, 1, 0, 0, 0, 4, 3, 0],\n",
+    "    ],\n",
+    "    dtype=np.uint8,\n",
+    ")"
    ]
   },
   {
@@ -403,9 +398,7 @@
    "source": [
     "# to % 5 nie ma pozniej znaczenia, ale dzialamy w z5 wiec niech bedzie\n",
     "\n",
-    "M_coded = np.array([\n",
-    "    (w.T.dot(G)).T % 5 for w in M.T\n",
-    "])"
+    "M_coded = np.array([(w.T.dot(G)).T % 5 for w in M.T])"
    ]
   },
   {
@@ -553,7 +546,7 @@
     }
    ],
    "source": [
-    "M_encoded_norm = M_encoded / 4.\n",
+    "M_encoded_norm = M_encoded / 4.0\n",
     "\n",
     "sns.heatmap(M_encoded_norm, cmap=\"binary\", square=True)\n",
     "plt.axis(\"off\")\n",
