--- a/pro3/pro3.ipynb
+++ b/pro3/pro3.ipynb
@@ -20,16 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL_LIST_HIGH_RES = [\n",
-    "    \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Gratisography.jpg\",\n",
-    "    \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Unsplash.jpeg\",\n",
-    "    \"https://ithemes.com/wp-content/uploads/2016/10/Pixabay.jpg\",\n",
-    "    \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Lock-and-Stock-Photos.jpg\",\n",
-    "    \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Picography-e1477688691166.jpg\",\n",
-    "    \"https://iso.500px.com/wp-content/uploads/2014/06/W4A2827-1-3000x2000.jpg\",\n",
-    "]\n",
-    "\n",
-    "\n",
     "def fetch_image(response):\n",
     "    res = cv2.imdecode(np.asarray(bytearray(response.content)), cv2.IMREAD_COLOR)\n",
     "    assert type(res) != None, f\"Failed downloading from {response.url}\"\n",
@@ -40,7 +30,16 @@
     "    return [fetch_image(requests.get(url)) for url in urls]\n",
     "\n",
     "\n",
-    "IMAGES_HIGH_RES = fetch_images(URL_LIST_HIGH_RES)"
+    "IMAGES_HIGH_RES = fetch_images(\n",
+    "    [\n",
+    "        \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Gratisography.jpg\",\n",
+    "        \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Unsplash.jpeg\",\n",
+    "        \"https://ithemes.com/wp-content/uploads/2016/10/Pixabay.jpg\",\n",
+    "        \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Lock-and-Stock-Photos.jpg\",\n",
+    "        \"https://ithemes.com/wp-content/uploads/2016/10/Free-High-Quality-Images-Picography-e1477688691166.jpg\",\n",
+    "        \"https://iso.500px.com/wp-content/uploads/2014/06/W4A2827-1-3000x2000.jpg\",\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
