--- a/pro3/pro3.ipynb
+++ b/pro3/pro3.ipynb
@@ -71,7 +71,12 @@
    "outputs": [],
    "source": [
     "def apply_transformation(\n",
-    "    transformation, transformation_=None, imgs=IMAGES_HIGH_RES, cmap=\"viridis\", fig_size=8, **kwargs\n",
+    "    transformation,\n",
+    "    transformation_=None,\n",
+    "    imgs=IMAGES_HIGH_RES,\n",
+    "    cmap=\"viridis\",\n",
+    "    fig_size=8,\n",
+    "    **kwargs\n",
     "):\n",
     "    assert 2 <= len(imgs), \"Provide at leat 2 images\"\n",
     "\n",
@@ -148,7 +153,7 @@
     "\n",
     "\n",
     "def show_core_matrix(matrix, title, axis=\"off\"):\n",
-    "    plt.figure(figsize=(6, 6),  dpi=150)\n",
+    "    plt.figure(figsize=(6, 6), dpi=150)\n",
     "    plt.imshow(matrix, interpolation=\"none\", cmap=\"gray\")\n",
     "    plt.title(title)\n",
     "    plt.axis(axis)\n",
